* Fixed a minor layout issue * Replace the "Download" functionality with a "View Original"

--- a/mail-mock-r/src/components/topheader/TopHeader.scss
+++ b/mail-mock-r/src/components/topheader/TopHeader.scss
@@ -5,7 +5,7 @@
       text-align: start;
       margin-left: 6px;
       i {
-        padding-right: 4px;
+        margin-right: 4px;
       }
     }
   }
